# libirecovery

./: .gitignore  Makefile  Makefile.am  Makefile.shared  NEWS  README  README.md  TODO  configure.ac  debian_base.tar.xz  irecovery.c  libirecovery.c  libirecovery.pc.in
.github/workflows/: build.yml
include/: Makefile.am  libirecovery.h
include/libusb-1.0/: config.h
scripts/: boot.irs  test.irs
src/: Makefile.am  devices.c  irecovery.c  libirecovery-1.0.pc.in  libirecovery.c  thread.c  thread.h  utils.c  utils.h
tools/: Makefile.am  irecovery.c  irecovery_info  irecovery_info.c
udev/: 39-libirecovery.rules.in  Makefile.am
